# jiuhuang-pysdk

./: .CLAUDE.md  .gitignore  LICENSE  README.md  gitignore  main.py  pyproject.toml  test.py  test_backtest.py  test_dash.py  test_data_getter.py  test_search.py
.claude/: settings.local.json
examples/: 0_quickstart.py  1_get_data.py  2_get_data_for_diffrent_date_granularity.py  3_search_and_describe_data.py  4_backtest.py  5_mcp_server.py
jiuhuang/: backtest.py  dash.py  data.py  data_types.py  mcp.py  metrics.py  plot.py  risk_management.py  strategy.py  strategy2.py  utils.py
jiuhuang-data-skill/: SKILL.md
jiuhuang-data-skill/references/: data-workflow.md  mcp-server.md  modules.md
jiuhuang/front_src/: bt.html  bt2.html
jiuhuang/front_src/bt-dash/: index.html
jiuhuang/front_src/bt-dash/assets/: index-BQdV_OXR.css  index-BpWR2dZ6.css  index-CKIVuF33.css  index-Dbmucaqn.js  index-DhTJDhrj.js  index-c8Rj8BEk.js  index-lfG9N4NN.css  index-rnyUJrgs.js
