[project]
name = "jiuhuang-pysdk"
version = "0.1.4"
description = "Jiuhuang python sdk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pywebview>=6.1",
    "quantstats>=0.0.81",
    "rich>=14.3.2",
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/jiuhuang-asset/jiuhuang-pysdk"
Repository = "https://github.com/jiuhuang-asset/jiuhuang-pysdk"
Issues = "https://github.com/jiuhuang-asset/jiuhuang-pysdk/issues"


[tool.setuptools]
packages = ["jiuhuang"]

[tool.setuptools.package-data]
jiuhuang = ["front_src/**/*"]
